<resources>
    <string name="app_name">Nubeink</string>
    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>
    <string name="title_activity_teste">teste</string>
    <string name="saldoDisponivel">Saldo disponível em conta</string>
    <string name="nome">Nome</string>
    <string name="Email">Email</string>
    <string name="Saldo">Saldo</string>
    <string name="Senha">Senha</string>
    <string name="CrieConta">Crie sua Conta</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="bemVindo">Bem vindo</string>
    <string name="esqueciSenha">Esqueci minha senha</string>
    <string name="login">Login</string>
    <string name="cadastrese">Você é um novo usuário? Cadastre-se</string>
    <string name="conta">Conta</string>
    <string name="ola">Olá, Fulano</string>
    <string name="saldoConta">R$ 1.094,80</string>
    <string name="pix">Pix</string>
    <string name="pagar">Pagar</string>
    <string name="transferir">Transferir</string>
    <string name="depositar">Depositar</string>
    <string name="meusCartoes">Meus cartões</string>
    <string name="cartaoCredito">Cartão de Crédito</string>
    <string name="faturaAtual">Fatura Atual</string>
    <string name="limiteDisponivel">Limite disponível: R$ 730,00</string>
    <string name="zero">R$ 0,00</string>
    <string name="qualValorTransferencia">Qual é o valor da transferencia?</string>
    <string name="qualContaTranferencia">Qual é o nome ou ID que vai ser feita transferencia?</string>
    <string name="id">ID</string>
    <string name="qualValorDeposito">Qual é o valor do depósito?</string>
    <string name="qualContaDeposito">Qual é o nome ou ID que vai ser feita transferencia?</string>

</resources>